<resources>
    <string name="app_name">আমাদের টাঙ্গাইল</string>
    <string name="welcome">স্বাগতম</string>
    <string name="introduction">পরিচিতি</string>
    <string name="upa">উপজেলা</string>
    <string name="images">ছবি</string>
    <string name="map">ম্যাপ</string>
    <string name="famous_person">বিখ্যাত ব্যক্তিগণ</string>
    <string name="Ins">প্রতিষ্ঠান সমূহ</string>
    <string name="historical_place">ঐতিহাসিক স্থান</string>
    <string name="Introduce">ভূমিকা:</string>
    <string name="History">টাঙ্গাইল জেলা বাংলাদেশের মধ্যাঞ্চলে অবস্থিত
        যা ঢাকা বিভাগের একটি প্রশাসনিক অঞ্চল। এর জনসংখ্যা
        প্রায় ৩৮ লক্ষ এবং আয়তন ৩৪১৪.৩৫ বর্গ কিলোমিটার।
        টাঙ্গাইল আয়তনের ভিত্তিতে ঢাকা বিভাগের সর্ববৃহৎ এবং
        জনসংখ্যার ভিত্তিতে ২য় সর্ববৃহৎ জেলা।
        ১৯৬৯ খ্রিস্টাব্দ অবধি টাঙ্গাইল ছিল অবিভক্ত
        ময়মনসিংহ জেলার একটি মহকুমা; ১৯৬৯
        খ্রিস্টাব্দে টাঙ্গাইল মহকুমাকে জেলায় উন্নীত করা হয়।
        এটি একটি নদী বিধৌত কৃষিপ্রধান অঞ্চল।
        এই জেলা যমুনা নদীর তীরে অবস্থিত
        এবং এর মাঝ দিয়ে লৌহজং নদী প্রবাহমান।</string>
    <string name="Area">অবস্থান ও আয়তন</string>
    <string name="Area2">টাংগাইল জেলা ঢাকা হতে প্রায় ৯২ কি মি দূরে অবস্থিত।
        এই জেলার পূর্বে রয়েছে ময়মনসিংহ ও গাজীপুর জেলা,
        পশ্চিমে সিরাজগঞ্জ জেলা,উত্তরে জামালপুর জেলা, দক্ষিণে ঢাকা ও
        মানিকগঞ্জ জেলা। এর আয়তন ৩৪১৪.৩৮ বর্গ কি.মি.।</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="heading_Rubber">মধুপুরের রাবার বাগান</string>
    <string name="Rubber">
        প্রকৃতির কাছাকাছি এলেই মন এক ধরনের প্রশান্তিতে ভরে যায়, কারণ প্রকৃতি আমাদের বিনম্র হতে শিক্ষা দেয়।
        বলছিলাম, টাঙ্গাইলের মধুপুরের পীরগাছা রাবার বাগানের কথা।
        কাঁচা সবুজ রঙের পাতা। সুউচ্চ বৃক্ষের সারি। ঠিক যেন স্কেল দিয়ে
        মেপে মেপে একই সমান্তরালে লাগানো গাছগুলো। যতদূর চোখ যায় শুধু গাছ আর গাছ।
        চারদিকে সবুজের সমারোহ। দেখলেই মন ভরে যায়। গাছগুলোর নাম রাবার গাছ।
        দুই ধারে হাজারো গাছ আর এরই মাঝখানে সুবিশাল পথ।
        পথ চলতে চলতে মনে হয়, এই পথ যদি শেষ না হতো!
        বাগানটির অন্যতম সৌন্দর্য হলো এটি একেক ঋতুতে একেক রকম সাজে সজ্জিত হয়।
        শীতকালে গাছের সব পাতা ঝরে গিয়ে যেমন রিক্ত হয়, তেমনি বর্ষায় ফিরে পায় নতুন যৌবন।
        কিছুদূর এগিয়েই চোখে পড়ে বাগানের অফিস।
        অফিসের পাশেই রয়েছে গেস্টহাউস।
        গেস্টহাউসে অনুমতি সাপেক্ষে থাকার সুযোগও মেলে তাতে।</string>
    <string name="Mosque">ধনবাড়ী মসজিদ</string>
    <string name="todo4">TODO</string>
    <string name="Mosque2">
        চন্দ্র বংশীয় রাজা যশোধর সাবেক পুখুরিয়া (বর্তমানে ধনবাড়ি
        এই পরগণার অন্তর্গত ছিলো) শাসক ছিলেন মোগল আমলে।
        তাঁর সেনাপতি ছিলেন গৌড়ের সুলতানের ওমরাহ ধনুয়ার খাঁ।
        তিনি কৌশলে রাজ্যটি দখল করে পুত্র ইস্পিঞ্জার খাঁকে দিয়েছিলেন।
        এই ইস্পিঞ্জার খাঁ ও তার ভ্রাতা মনোয়ার খাঁ ধনবাড়িতে জমিদারি প্রতিষ্ঠা
        করেন অবশ্য জমিদারি প্রতিষ্ঠা নিয়ে অন্য মতবাদও রয়েছে। ধনবাড়ি জমিদার
        বাড়ির প্রধান আবাস ভবন, কাঁচারি ভবন, তিন গম্বুজবিশিষ্ট একটি মসজিদ ও কবরস্থান
        সমন্বয়ে পরিকল্পিত। প্রধান আবাস ভবনটি একটি বেষ্টনি প্রাচীর দ্বারা সুরক্ষিত। এর অভ্যন্তরে রয়েছে
        প্রশস্ত একটি বাগিচা। ধারণা করা হয় ইস্পিঞ্জার খাঁ ও মনোয়ার খাঁ ছিলেন ধনবাড়ি মসজিদের প্রতিষ্ঠাতা।
        মসজিদটি ধনবাড়ি নবাব মঞ্জিলের বাইরে দিঘির পাড়ে অবস্থিত।

</string>
    <string name="famous1">এস এম নজরুল ইসলাম</string>
    <string name="todo5">TODO</string>
    <string name="famous4">এস এম নজরুল ইসলামের জন্ম বাংলাদেশের টাঙ্গাইল
        সদর উপজেলার গোসাই জোয়াইর নামক গ্রামে।
        তার পাঁচ ছেলে ও দুই মেয়ে। তিনি ইসলামের দ্বিতীয়
        স্তম্ভ পবিত্র হজ্জ পালন করেন।
        এস এম নজরুল ইসলামের পিতা ছিলেন একজন ব্যবসায়ী।
        তিনি এবং তার পিতা স্বাধীনতার আগে ভারতের আসামের সাথে নৌপথে
        ব্যবসা করতেন। পরে বাংলাদেশ স্বাধীন হওয়ার পর তিনি নিজে আলাদা ব্যবসা
        শুরু করেন। ১৯৭৭ সালে তিনি রেজভি এন্ড ব্রাদার্স নামে একটি কোম্পানি
        প্রতিষ্ঠা করেন। যা তার বড় ছেলে এস এম নুরুল ইসলাম রিজভির নামানুসারে করেছেন।
        বিভিন্ন ব্যবসার পাশাপাশি তিনি দুটি ইলেক্ট্রনিক্স কোম্পানি গড়ে তুলেন।
        প্রথমটি হলো ওয়ালটন ও দ্বিতীয়টি মার্সেল। তিনি ছিলেন সৎ ও নিষ্ঠাবান একজন ব্যবসায়ী। </string>
    <string name="sub_dis">টাঙ্গাইলের উপজেলা সমূহ:</string>
    <string name="m201">২০১ গম্বুজ মসজিদ</string>
    <string name="mos_201">
             বিশ্বের মসজিদের ইতিহাসে জায়গা
             করে নিতে যাচ্ছে টাঙ্গাইল জেলার গোপালপুর উপজেলার ঝাওয়াইল ইউনিয়নের দক্ষিণ পাথালিয়া
             গ্রামে নির্মাণাধীন ২০১ গম্বুজ মসজিদ। নির্মাতাদের দাবী, এটিই বিশ্বের সবচেয়ে বেশি গম্বুজ এবং
             দ্বিতীয় উচ্চতম মিনারের মসজিদ হতে যাচ্ছে।
             নির্মাণাধীন ২০১ গম্বুজ মসজিদটি বীর
             মুক্তিযোদ্ধা রফিকুল ইসলাম কল্যাণ ট্রাস্টের উদ্যোগে নির্মিত হচ্ছে। মসজিদটির মিনারের উচ্চতা ৪৫১ ফুট।
             অর্থাৎ ৫৭ তলা উচ্চতার মিনারটি হবে বিশ্বের সবচেয়ে উঁচু ইটের তৈরি মিনার।
             বর্তমানে বিশ্বের সবচেয়ে উঁচু ইটের তৈরি
             মিনার হলো কুতুব মিনার। যা ভারতের দিল্লিতে অবস্থিত। উচ্চতা ২৪০ ফুট (৭৩ মিটার)।
             কুতুব মিনারে সিঁড়ি রয়েছে ৩৭৯টি।
             টাঙ্গাইলে নির্মিত মসজিদটি ১৫ বিঘা জমির ওপর নির্মাণ করা হচ্ছে।</string>
    <string name="manna">এস এম আসলাম তালুকদার</string>
    <string name="todo13">TODO</string>
    <string name="manna2">মান্না নামেই অধিক পরিচিত এস এম আসলাম
                তালুকদার তিনি ৩৫০ এর বেশি চলচ্চিত্রে অভিনয় করেছেন। দাঙ্গা, লুটতরাজ,
                তেজী, আম্মাজান, আব্বাজান প্রভৃতি চলচ্চিত্রে চমৎকার অভিনয় এর মাধ্যমে জনপ্রিয়তার চূড়া
                ছুঁয়েছিলেন মান্না। তাঁর অভিনীত আম্মাজান চলচ্চিত্রটি বাংলাদেশের সর্বাধিক ব্যবসাসফল ও জনপ্রিয়
                চলচ্চিত্রগুলোর মধ্যে অন্যতম। তিনি বীর সৈনিক (২০০৩) সেরা অভিনেতা বিভাগে জাতীয় চলচ্চিত্র পুরস্কার লাভ করেন।
                তিনি আটবার মেরিল-প্রথম আলো পুরস্কারের মনোনয়ন লাভ করেন এবং তিনবার এই পুরস্কার অর্জন করেন।
                তাঁর প্রথম অভিনীত ছবির নাম তওবা, কিন্তু প্রথম মুক্তি পায় পাগলি ছবিটি।
                ১৯৯১ সালে মোস্তফা আনোয়ার পরিচালিত কাসেম মালার প্রেম ছবিতে প্রথম
                একক নায়ক হিসেবে সুযোগ পেয়েছিলেন। এর আগে সব ছবিতে মান্না ২য় নায়ক
                হিসেবে অভিনয় করেছেন।</string>
    <string name="Prom">প্রমথনাথ রায় চৌধুরী</string>
    <string name="todo14">TODO</string>
    <string name="Promote">তিনি বিখ্যাত কবি, নাট্যকার হিসেবে এবং ইংরেজি
                সাহিত্যে তাঁর ভালো দখল ছিলো। তিনি স্বদেশী আন্দোলনে যথেষ্ট অবদান
                রাখেন এবং নাটোরের মহারাজার সঙ্গে একত্রে ‘সাহিত্য সঙ্গীত’ নামক সাহিত্য
                প্রতিষ্ঠান স্থাপন করেন এছাড়া প্রবাসী, মানসী, ভারতবর্ষ, প্রদীপ, সাহিত্য প্রভৃতি
                পত্রিকায় তাঁর অত্যন্ত হৃদ্যতা ছিল। ‘প্রমথ নাথের গ্রন্থাবলী’ নামে কয়েক খন্ডে প্রকাশিত হয়েছিল
                ও রবীন্দ্রনাথ তাঁর নামে কণিকা কাব্য এবং তিনি রবীন্দ্রনাথের নামে
                ‘পদ্ম’ কাব্যগ্রন্থ উৎসর্গ করেন। তিনি ১৯৪৯ সালে মৃত্যুবরণ করেন।
                তিনি ১৮৭২ সালে সন্তোষের জমিদার পরিবারে জন্মগ্রহণ করেন।
                উল্লেখযোগ্য গ্রন্থ:
                পদ্ম, দিপালী, গীতিকা, আরতি, গৌরাঙ্গ।
                উল্লেখযোগ্য নাটক:
                ভাগ্যচক্র, চিতোরোদ্ধার বা হাম্বির, জয় পরাজয়।
    </string>
    <string name="Go">গোপালপুর</string>
    <string name="So">সখিপুর</string>
    <string name="Vu">ভুয়াপুর</string>
    <string name="Ga">ঘাটাইল</string>
    <string name="Ka">কালিহাতি</string>
    <string name="Ba">বাসাইল</string>
    <string name="Mo">মধুপুর</string>
    <string name="De">দেলদুয়ার</string>
    <string name="Dho">ধনবাড়ি</string>
    <string name="Ta">টাঙ্গাইল সদর</string>
    <string name="Mi">মির্জাপুর</string>
    <string name="Na">নাগরপুর</string>
    <string name="Train1">কমলাপুর রেল স্টেশন থেকে টাঙ্গাইল
                ও সিরাজগঞ্জ রোডে  যে কয়েকটি ট্টেন চলাচল করে যমুনা এক্সপ্রেস ও অগ্নিবীনা তার মধ্যে অন্যতম।
                যমুনা এক্সপ্রেস ঢাকা-বঙ্গবন্ধু সেতু পূর্ব রোড পর্যন্ত  চলাচল করে ৭৪৬/৭৪৫ নং যমুনা আন্ত:নগর ট্রেনটি।
                প্রধান স্টেশনের ঠিকানা ও যোগাযোগ কমলাপুর রেলওয়ে স্টেশন
                ফোন নম্বর: +৮৮-০২-৯৩৫৮৬৩৪,৯৩৩১৮২২
                মোবাইল নম্বর: +৮৮-০১৭১১৬৯১৬১২
                বিমানবন্দর রেলওয়ে ষ্টেশন ফোন নম্বর:+৮৮-০২- ৮৯২৪২৩৯
                ওয়েবসাইট: www.railway.gov.bd</string>
    <string name="KMosque">ঢাকা থেকে টাঙ্গাইলের ২০১ গম্বুজ মসজিদে আসার উপায়</string>
    <string name="Mos">ঢাকা হতে টাঙ্গাইলের দূরত ১০০ কি.মি.।
                 বাসে ভাড়া ১৬০-২৫০ টাকা।দ্রুতগামী বাস যা গোপালপুরের নিজস্ব গাড়ি,তাছাড়া আরো আছে নিরালা, শুভেচ্ছা,
                 বিনিময় সহ বেশ কিছু বাস সার্ভিস।
                 মহাখালী, আব্দুল্লাহপুর থেকে বাস গুলা ছেড়ে যায
                 * টাঙ্গাইল জেলায় রাত্রি যাপনের জন্য রিসোর্ট বা আবাসিক হোটেল আছে
                 নাম: 1.এলেঙ্গা রিসোর্ট, এলেঙ্গা,2.যমুনা রিসোর্ট, যমুনা ব্রীজ।
                 টাঙ্গাইল জেলা সদর থেকে  গোপালপুর উপজেলা সদর পর্যন্ত দূরত্ব ৪৪কি,মি আবার
                 গোপালপুর উপজেলা সদর থেকে ২০১ গম্বুজ মসজিদের দূরত্ব: ৬ কি. মিটার।
                 মহাখালি বাস টার্মিনাল থেকে বাসযোগে গোপালপুর আসা যায়,
                 * গাবতলী, মিরপুর বাস টার্মিনাল থেকে বাসযোগে নবীনগর চন্দ্রা হয়ে গোপালপুর আসা যায়,
                 * সায়েদাবাদ বাস টার্মিনাল- মহাখালি হয়ে গোপালপুর আসা যায়,
                 * কলাবাগান, রাসেল স্কয়ার, শুক্রাবাদ-মহাখালি  হয়ে গোপালপুর আসা যায়,
                 * আসাদ গেইট, কলেজগেইট, কল্যাণপুর-মহাখালি হয়ে গোপালপুর আসা যায়,
                 * আরামবাগ, কমলাপুর, মতিঝিল-মহাখালি  হয়ে গোপালপুর আসা যায়,
                 ঢাকা থেকে বাসযোগে গোপালপুর এসে তারপর ৫ টাকা ভাড়া দিয়ে অটো বা ভ্যান গাড়ি দিয়ে
                 থানা ব্রিজে নামলে সেখান থেকে ঝাওয়াইল ২০১ গম্বুজ মসজিদ যাওয়ার জন্য CNG বা অটো বা ভ্যান
                 সহ আরো বিভিন্ন রকম যানবাহন পাওয়া যাবে।
</string>
    <string name="Buss_Mos">বাসে ঢাকা থেকে ২০১ গম্বুজ মসজিদে ভ্রমণ:</string>
    <string name="Train_Mos">রেল-পথে ঢাকা থেকে ২০১ গম্বুজ মসজিদে ভ্রমণ:</string>
    <string name="todo16">TODO</string>
    <string name="Rub">আসার উপায়</string>
    <string name="Rub_Buss">বাসে ঢাকা থেকে আসার উপায়:</string>
    <string name="Rubber_buss"> বাসে ভাড়া ১৬০-২৫০ টাকা।দ্রুতগামী বাস যা
        গোপালপুরের নিজস্ব গাড়ি,তাছাড়া আরো আছে নিরালা, শুভেচ্ছা,
        বিনিময় সহ বেশ কিছু বাস সার্ভিস।
        মহাখালী, আব্দুল্লাহপুর থেকে বাস গুলা ছেড়ে যায</string>
    <string name="Rub_train">রেল-পথে ঢাকা থেকে আসার উপায়:</string>
    <string name="Rubber_train">কমলাপুর রেল স্টেশন থেকে টাঙ্গাইল
                ও সিরাজগঞ্জ রোডে  যে কয়েকটি ট্টেন চলাচল করে যমুনা এক্সপ্রেস ও অগ্নিবীনা তার মধ্যে অন্যতম।
                যমুনা এক্সপ্রেস ঢাকা-বঙ্গবন্ধু সেতু পূর্ব রোড পর্যন্ত  চলাচল করে ৭৪৬/৭৪৫ নং যমুনা আন্ত:নগর ট্রেনটি।</string>
    <string name="DC">ডিসি লেক</string>
    <string name="todo19">TODO</string>
    <string name="Dc_dis">টাঙ্গাইল মেডিকেল কলেজ হাসপাতালের
        সামনে ৩৩ দশমিক ৪৫ একর আয়তনের দৃষ্টিনন্দন
        ডিসি লেক অবস্থিত।এখানে রয়েছে ছোট নৌকায় ঘুরে বেড়ানোরও সুযোগ,
        শিশু পার্কে, ভাসমান মঞ্চ, আর মঞ্চের ভেতরে রয়েছে ফাস্ট ফুড, এছাড়া
        লেকের পশ্চিম পাশে বেশ কয়েকটি খাবারের দোকান রয়েছে। প্রিয়জনকে
        নিয়ে খানিকটা সুস্থ বিনোদনের ব্যবস্থা রয়েছে এখানে। পাখিদের কৃত্রিম বাসস্থানের
        পাশাপাশি বিলুপ্ত (প্রায়) পানকৌড়ি দেখা যায় এই ডিসি লেকে ।</string>
    <string name="DC_leak">আসার উপায়</string>
    <string name="DC_Buss">বাসে ঢাকা থেকে আসার উপায়:</string>
    <string name="DC_leak_buss"> বাসে ভাড়া ১৬০-২৫০ টাকা।দ্রুতগামী বাস যা
        গোপালপুরের নিজস্ব গাড়ি,তাছাড়া আরো আছে নিরালা, শুভেচ্ছা,
        বিনিময় সহ বেশ কিছু বাস সার্ভিস।
        মহাখালী, আব্দুল্লাহপুর থেকে বাস গুলা ছেড়ে যায।
        সেখান থেকে টাঙ্গাইল বাস স্টেশনে নেমে রিকশা বা সিএনজি দিয়ে
        টাঙ্গাইল মেডিকেল কলেজ হাসপাতালের সামনেই পাবেন দৃষ্টিনন্দন ডিসি লেক।
    </string>
    <string name="DC_train">রেল-পথে ঢাকা থেকে আসার উপায়:</string>
    <string name="DC_leak_train">কমলাপুর রেল স্টেশন থেকে টাঙ্গাইল
        ও সিরাজগঞ্জ রোডে  যে কয়েকটি ট্টেন চলাচল করে যমুনা এক্সপ্রেস ও অগ্নিবীনা তার মধ্যে অন্যতম।
        যমুনা এক্সপ্রেস ঢাকা-বঙ্গবন্ধু সেতু পূর্ব রোড পর্যন্ত  চলাচল করে ৭৪৬/৭৪৫ নং যমুনা আন্ত:নগর ট্রেনটি।
        কিন্তু টাঙ্গাইল সদরে সরাসরি ট্রেনে আসার কোনো রাস্থা নাই।সুতরাং ট্রেনে না আসাটাই ভালো।
    </string>
</resources>