<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#000000"
    android:layout_height="match_parent"
    tools:context=".Second">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10sp"
                android:text="@string/m201"
                android:textAlignment="center"
                android:textColor="#29d919"
                android:textSize="30sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:contentDescription="@string/todo16"
                android:src="@drawable/mos201" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15sp"
                android:text="@string/mos_201"
                android:textColor="#c3ffffff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/KMosque"
                android:textColor="#cd17dc14"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10sp"
                android:text="@string/Buss_Mos"
                android:textColor="#f4d6e62e"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:text="@string/Mos"
                android:textColor="#fdfafa"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10sp"
                android:text="@string/Train_Mos"
                android:textColor="#f4d6e62e"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:text="@string/Train1"
                android:textColor="#fcf9f9"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="100dp"
                android:paddingStart="100dp"
                android:text="@string/DC"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="30sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:contentDescription="@string/todo19"
                android:src="@drawable/dcleck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15sp"
                android:text="@string/Dc_dis"
                android:textColor="#c3ffffff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DC_leak"
                android:textColor="#f9ecda34"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10sp"
                android:text="@string/DC_Buss"
                android:textColor="#f914dcc5"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:text="@string/DC_leak_buss"
                android:textColor="#c3ffffff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:text="@string/DC_train"
                android:textColor="#f914dcc5"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10sp"
                android:text="@string/DC_leak_train"
                android:textColor="#c3ffffff"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10sp"
                android:text="@string/heading_Rubber"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="30sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:contentDescription="@string/todo3"
                android:src="@drawable/rabar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15sp"
                android:text="@string/Rubber"
                android:textColor="#c3ffffff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rub"
                android:textColor="#f81714dc"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10sp"
                android:text="@string/Rub_Buss"
                android:textColor="#ee21dc14"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:text="@string/Rubber_buss"
                android:textColor="#c3ffffff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:text="@string/Rub_train"
                android:textColor="#ee21dc14"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10sp"
                android:text="@string/Rubber_train"
                android:textColor="#c3ffffff"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10sp"
                android:text="@string/Mosque"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="30sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/todo4"
                android:src="@drawable/mos" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15sp"
                android:text="@string/Mosque2"
                android:textColor="#c3ffffff"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>