<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/upa"
    tools:context=".Five">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#60413e3e"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_dis"
                android:textSize="30sp"
                android:textColor="#e12915"
                android:padding="10sp"/>
            <Button
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/Ta"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/design"/>
            <Button
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/Mi"
                android:layout_margin="3sp"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:background="@drawable/design"/>
            <Button
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/Na"
                android:layout_margin="3sp"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:background="@drawable/design"/>
            <Button
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/Mo"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/design"/>
            <Button
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/Go"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/design"/>
            <Button
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/Dho"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/design"/>
            <Button
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/De"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/design"/>
            <Button
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/Ba"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/design"/>
            <Button
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/Ka"
                android:layout_margin="3sp"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:background="@drawable/design"/>
            <Button
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/Ga"
                android:layout_margin="3sp"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:background="@drawable/design"/>
            <Button
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/Vu"
                android:layout_margin="3sp"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:background="@drawable/design"/>
            <Button
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/So"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:textSize="25sp"
                android:background="@drawable/design"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>